k8s/localstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: cloud-app
  labels:
    app: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:3.4
          ports:
            - containerPort: 4566
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: cloud-app
  labels:
    app: localstack
spec:
  type: ClusterIP
  selector:
    app: localstack
  ports:
    - name: gateway
      protocol: TCP
      port: 4566
      targetPort: 4566
