k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app-service
  namespace: cloud-app
  labels:
    app: cloud-app
spec:
  type: NodePort
  selector:
    app: cloud-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
